--- a/SourceCode/2023/Oct2023/Basics/Task34/Substraction.xaml
+++ b/SourceCode/2023/Oct2023/Basics/Task34/Substraction.xaml
@@ -83,7 +83,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Assign sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_1">
+    <Assign DisplayName="Peforming Substraction of two number" sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_1">
       <Assign.To>
         <OutArgument x:TypeArguments="x:Int32">[Out_Subs]</OutArgument>
       </Assign.To>
