--- a/SourceCode/2023/Oct2023/Basics/karunakar/Task9/Main.xaml
+++ b/SourceCode/2023/Oct2023/Basics/karunakar/Task9/Main.xaml
@@ -84,17 +84,17 @@
         <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Reading User input 1 using Input Dialog" sap:VirtualizedContainerService.HintSize="486,239" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Please enter firstname here" Title="Enter your name">
+    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Reading User input 1 using Input Dialog" sap:VirtualizedContainerService.HintSize="486,239" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Please enter first name here" Title="Enter your name">
       <ui:InputDialog.Result>
         <OutArgument x:TypeArguments="x:String">[FirstName]</OutArgument>
       </ui:InputDialog.Result>
     </ui:InputDialog>
-    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Reading User input 2 using Input Dialog" sap:VirtualizedContainerService.HintSize="486,239" sap2010:WorkflowViewState.IdRef="InputDialog_2" IsPassword="False" Label="Please enter your secondname here" Title="Enter your  name">
+    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Reading User input 2 using Input Dialog" sap:VirtualizedContainerService.HintSize="486,239" sap2010:WorkflowViewState.IdRef="InputDialog_2" IsPassword="False" Label="Please enter your second name here" Title="Enter your  name">
       <ui:InputDialog.Result>
         <OutArgument x:TypeArguments="x:String">[SecondName]</OutArgument>
       </ui:InputDialog.Result>
     </ui:InputDialog>
-    <Assign DisplayName="Assigning values to Array varaible Names Assign" sap:VirtualizedContainerService.HintSize="486,82" sap2010:WorkflowViewState.IdRef="Assign_1">
+    <Assign DisplayName="Assigning values to Array varaible Names using Assign" sap:VirtualizedContainerService.HintSize="486,82" sap2010:WorkflowViewState.IdRef="Assign_1">
       <Assign.To>
         <OutArgument x:TypeArguments="s:String[]">[Names]</OutArgument>
       </Assign.To>
