--- a/SourceCode/2023/Nov2023/Navneeth/Task 3/Main.xaml
+++ b/SourceCode/2023/Nov2023/Navneeth/Task 3/Main.xaml
@@ -80,7 +80,7 @@
       <AssemblyReference>UiPath.Platform</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="The task is for date &amp; time Variable." DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="496,535.3333333333334" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="The task is for date &amp; time Variable." DisplayName="Main Sequence - Date &amp; Time Formats" sap:VirtualizedContainerService.HintSize="496,535.3333333333334" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="s:DateTime" Name="dt_Date" />
     </Sequence.Variables>
