--- a/SourceCode/2023/Nov2023/Navneeth/Task 4/Main.xaml
+++ b/SourceCode/2023/Nov2023/Navneeth/Task 4/Main.xaml
@@ -76,7 +76,7 @@
       <AssemblyReference>UiPath.System.Activities.ViewModels</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="This task is for identifying the leap year" DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="472,1004.6666666666665" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="This task is for identifying the leap year" DisplayName="Main Sequence - Leap year" sap:VirtualizedContainerService.HintSize="472,1004.6666666666665" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:Int32" Name="B_Year" />
     </Sequence.Variables>
