--- a/SourceCode/2023/Nov2023/Ram kumar/Task4/Leap Year.xaml
+++ b/SourceCode/2023/Nov2023/Ram kumar/Task4/Leap Year.xaml
@@ -110,7 +110,7 @@
               <av:Size x:Key="ShapeSize">200,52</av:Size>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <If Condition="[NumYear Mod 4 =0]" DisplayName="Leap Year Condition" sap:VirtualizedContainerService.HintSize="410,709" sap2010:WorkflowViewState.IdRef="If_1">
+          <If Condition="[NumYear Mod 4 =0]" DisplayName="Leap Year Condition" sap:VirtualizedContainerService.HintSize="200,52" sap2010:WorkflowViewState.IdRef="If_1">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -135,7 +135,7 @@
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
                 <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Not a leap year" sap:VirtualizedContainerService.HintSize="334,85" sap2010:WorkflowViewState.IdRef="MessageBox_3" Text="[&quot;Entered year is not the leap year&quot;]" />
-                <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,141" sap2010:WorkflowViewState.IdRef="LogMessage_1" Message="[&quot;Entered year is not the leap year&quot;]" />
+                <ui:LogMessage DisplayName="Leap Year Log" sap:VirtualizedContainerService.HintSize="334,141" sap2010:WorkflowViewState.IdRef="LogMessage_1" Message="[&quot;Entered year is not the leap year&quot;]" />
               </Sequence>
             </If.Else>
           </If>
@@ -143,21 +143,5 @@
       </FlowStep.Next>
     </FlowStep>
     <x:Reference>__ReferenceID0</x:Reference>
-    <FlowStep>
-      <sap:WorkflowViewStateService.ViewState>
-        <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <av:Point x:Key="ShapeLocation">210,404</av:Point>
-          <av:Size x:Key="ShapeSize">200,52</av:Size>
-        </scg:Dictionary>
-      </sap:WorkflowViewStateService.ViewState>
-      <ui:StopJob Job="{x:Null}" Strategy="{x:Null}" TimeoutMS="{x:Null}" DisplayName="Stop Job" sap:VirtualizedContainerService.HintSize="200,52" sap2010:WorkflowViewState.IdRef="StopJob_1">
-        <sap:WorkflowViewStateService.ViewState>
-          <scg:Dictionary x:TypeArguments="x:String, x:Object">
-            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-            <x:Boolean x:Key="IsPinned">False</x:Boolean>
-          </scg:Dictionary>
-        </sap:WorkflowViewStateService.ViewState>
-      </ui:StopJob>
-    </FlowStep>
   </Flowchart>
 </Activity>
